--- a/_posts/2021-07-25-linux.md
+++ b/_posts/2021-07-25-linux.md
@@ -6,8 +6,7 @@ categories: [Linux]
 tags: [linux, bash]
 ---
 
-
-### Linux
+## Linux
 
 1. pwd - print worker directory
 1. uname -a - информация о системе
@@ -15,7 +14,6 @@ tags: [linux, bash]
 1. cd - change directory
 1. ls - list, флаги -a, -l, -h 
 1. mv - переместить, переименовать файл или директорию
-1. rm - remove удалить, с флагами -r (рекурсивно , для папок применяется), -f (force без подтеврждения)
+1. rm - remove удалить, с флагами -r (рекурсивно, применяется для папок), -f (force без подтверждения)
 1. sudo apt-get --purge remove <package name> - удаление пакета 
 1. gpkg --list - список все установленных пакетов
-
