--- a/_posts/2021-07-25-ruby.md
+++ b/_posts/2021-07-25-ruby.md
@@ -2,7 +2,7 @@
 title: Ruby
 author: AGN
 date: 2021-07-25 18:30:00 -0500
-categories: [Rails, ruby]
+categories: [Ruby]
 tags: [rails, ruby]
 ---
 
