Add description at index

--- a/_posts/2021-11-02-database.md
+++ b/_posts/2021-11-02-database.md
@@ -30,6 +30,6 @@ tags: [database, алгоритмы, транзакция, ACID]
 
 ### Индексы
 
-Индекс - c
+Индекс - объект базы данных, создаваемый с целью повышения производительности поиска данных. ... Индекс формируется из значений одного или нескольких столбцов таблицы и указателей на соответствующие строки таблицы и, таким образом, позволяет искать строки, удовлетворяющие критерию поиска.
 B-Tree index
 селективность индекса, важно при составном индексе
